--- a/tsconfig.json
+++ b/tsconfig.json
@@ -122,6 +122,6 @@
       "module": "CommonJS"
     }
   },
-  "include": ["src/**/*", "config/**/*", "src/app/types/**/*", "public/libs/webix/types/**/*"],
+  "include": ["src/**/*", "config/**/*", "public/libs/webix/types/**/*"],
   "exclude": ["build/**/*"]
 }
