--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "preinstall": "npm install -g pnpm@8.15.8 & npx only-allow pnpm",
     "start": "webpack serve --env port=3001",
+    "prebuild": "node generateTemplateList.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint": "pnpm run lint:ts && pnpm run lint:styles && pnpm run prettier",
